--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/ccxt@1.70.42/dist/ccxt.browser.js"></script>
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/ccxt@1.70.42/dist/ccxt.browser.js"></script> -->
+
+
+<script src="js/index.js"></script>
 
 <script>
-$(document).ready(function(){
-  console.log (ccxt.exchanges)
-});
+  $(document).ready(function(){
+    btc_usdt()
+  })
 
 </script>
     
