--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <script>
   $(document).ready(function(){
-    btc_usdt()
+    setInterval(function () {btc_usdt()}, 1000)
   })
 
 </script>
@@ -38,19 +38,21 @@
     <div>
       <h3 class="float-md-start mb-0">Lotobtc</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link active" aria-current="page" href="#">Tahmin Et Kazan</a>
+        <a class="nav-link" href="#">Nasıl Çalışıyor</a>
+        <a class="nav-link" href="#">İletişim</a>
       </nav>
     </div>
   </header>
 
-  <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-    </p>
+  <main class="jumbotron px-3">
+
+    <span class="btc_usdt h2"></span>
+  
+
+
+
+
   </main>
 
   <footer class="mt-auto text-white-50">
