--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script>
   $(document).ready(function(){
-    setInterval(function () {btc_usdt()}, 1000)
+    setInterval(function () {btc_usdt()}, 2000)
   })
 
 </script>
@@ -51,21 +51,19 @@
   <main class="jumbotron px-3">
 
     <div class="h3">
-      Anlık bitcoin fiyatı: <span class="btc_usdt"></span>
-      <br><span class="btn btn-link text-white">Haftalık kapanış ne olur?</span>
+      Anlık bitcoin fiyatı
+      <br>
+      <span class="btc_usdt"><i class='fa fa-spinner fa-spin'></i></span>$
+      <br><br>
+      <span class="btn btn-link text-white">Haftalık kapanış ne olur?</span>
     </div>
-    
-
-    
-  
-
 
 
 
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>Lotobtc 2022</p>
   </footer>
 </div>
 
