--- a/index.html
+++ b/index.html
@@ -51,18 +51,24 @@
 
   <main class="jumbotron px-3">
 
-    <div class="h3">
-      Anlık bitcoin fiyatı
-      <br>
-      <span class="span_btc_usdt"><i class='fa fa-spinner fa-spin'></i></span>$
-      <br><br>
-      <span class="text-white">Haftalık kapanış ne olur?</span>
+    <div class="">
+      <div class="h3">
+        Anlık bitcoin fiyatı
+        <br>
+        <span class="span_btc_usdt"><i class='fa fa-spinner fa-spin'></i></span>$
+      </div>
+      
+      <span class="text-white">Günlük kapanış ne olur?</span>
 
       <div class="input-group mb-3" style="padding-left: 40%; padding-right: 40%;">
         <button type="button" class="btn btn-outline-secondary"><i class="fab fa-bitcoin" style="color: #2196F3;"></i></button>
         <input id="text_btc_usdt" type="text" class="form-control">
         <button type="button" class="btn btn-outline-secondary"><i class="fas fa-dollar-sign"></i></button>
+
       </div>
+      <span class="">Bahisler saat 00:00'a kadar açıktır</span>
+      <br>
+      <button type="button" class="btn btn-lg btn-outline-secondary text-white">Bahis Yap</button>
 
     </div>
 
