--- a/index.html
+++ b/index.html
@@ -28,49 +28,52 @@
 
 
 
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex h-100 text-center text-white bitcoin-bg" style="background-color: #0c0d0f;">
     
 <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0"><img class="mb-1" src="img/logo.png" style="height:32px;"/> Lotobtc</h3>
+      <h3 class="float-md-start mb-0">
+        <img class="mb-1" src="img/logo.png" style="height:32px;"/> 
+        <span style="color: #f0b90b;">Lotobtc</span>
+      </h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Tahmin Et Kazan</a>
-        <a class="nav-link" href="#">Nasıl Çalışıyor</a>
-        <a class="nav-link" href="#">İletişim</a>
+        <a class="nav-link active" style="color: #f0b90b;" aria-current="page" href="#">Tahmin Et Kazan</a>
+        <a class="nav-link" style="color: #848e9c;" href="#">Nasıl Çalışıyor</a>
+        <a class="nav-link" style="color: #848e9c;" href="#">İletişim</a>
       </nav>
     </div>
   </header>
 
   <main class="jumbotron px-3">
-
     <div class="">
-      <div class="h3">
+      <div class="h3" style="color: #eaecef;">
         Anlık bitcoin fiyatı
         <br>
-        <span class="span_btc_usdt"><i class='fa fa-spinner fa-spin'></i></span>$
+        <span class="span_btc_usdt" style="color: #f0b90b;"><i class='fa fa-spinner fa-spin'></i></span>$
       </div>
       
       <span class="text-white">Günlük kapanış ne olur?</span>
 
       <div class="input-group mb-3" style="padding-left: 40%; padding-right: 40%;">
-        <button type="button" class="btn btn-outline-secondary"><i class="fab fa-bitcoin" style="color: #2196F3;"></i></button>
-        <input id="text_btc_usdt" type="text" class="form-control">
-        <button type="button" class="btn btn-outline-secondary"><i class="fas fa-dollar-sign"></i></button>
-
+        <button type="button" class="btn" style="background-color: #1e2329; color: #f0b90b; border: 1px solid #848e9c;">
+          <i class="fab fa-bitcoin"></i>
+        </button>
+        <input id="text_btc_usdt" type="text" class="form-control" style="background-color: #1e2329; border: 1px solid #848e9c; color: #eaecef;">
+        <button type="button" class="btn" style="background-color: #1e2329; color: #f0b90b; border: 1px solid #848e9c;">
+          <i class="fas fa-dollar-sign"></i>
+        </button>
       </div>
-      <span class="">Bahisler saat 00:00'a kadar açıktır</span>
+      <span style="color: #848e9c;">Bahisler saat 00:00'a kadar açıktır</span>
       <br>
-      <button type="button" class="btn btn-lg btn-outline-secondary text-white">Bahis Yap</button>
-
+      <button type="button" class="btn btn-lg px-5 py-3" style="background-color: #f0b90b; color: #0c0d0f; border: none; margin-top: 20px; font-size: 1.25rem; font-weight: bold;">
+        Bahis Yap
+      </button>
     </div>
-
-
-
   </main>
 
-  <footer class="mt-auto text-white-50">
-    <p>Lotobtc 2023</p>
+  <footer class="mt-auto">
+    <p style="color: #848e9c;"><strong>Lotobtc 2025</strong></p>
   </footer>
 </div>
 
